# To-Do-List-CLI-app-in-RUST-

./: Cargo.toml  README.md  todo_list.txt
src/: func.rs  main.rs  mongofn.rs  test.rs
