[package]
name = "synctodo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = {version = "3.0.1",features = ["sync"]}
tokio = { version = "1.38.0", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
structopt = "0.3" 
workout = "0.1.3"
meal = "1.0.0"
